# Income_Devider

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
