[package]
name = "slint_pr"
version = "0.1.0"
authors = ["amir"]
edition = "2021"
build = "build.rs"
description = "A desktop App for Income Dividing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
[package.metadata.bundle]   
name="Income Divider"
identifier="io.github.Bencheikh-Amir.Income_Devider"
description="A desktop App for Income Dividing"


[build-dependencies]
slint-build = "1.6"
